--- a/05/03_03_dataviz.ipynb
+++ b/05/03_03_dataviz.ipynb
@@ -10,16 +10,16 @@
    "source": [
     "## Class Announcements\n",
     "\n",
-    "**Due Friday**:\n",
-    "- D2\n",
-    "\n",
     "**Due Monday**:\n",
+    "- D3\n",
+    "\n",
+    "**Due Friday**:\n",
     "- Q3\n",
     "- Project review\n",
     "\n",
     "\n",
     "**Notes**:\n",
-    "- Repo invites: missed yours? Ask on Piazza in private message to instructors!"
+    "- Repo invites: Keep an eye out, we are about there"
    ]
   },
   {
